// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsToolbar matches snapshot with no selected transactions 1`] = `
<div
  className="MuiToolbar-root MuiToolbar-regular TableToolbar-root-1 MuiToolbar-gutters"
>
  <div
    className="TableToolbar-title-5"
  >
    <div>
      <h6
        className="MuiTypography-root MuiTypography-h6"
      >
        Title
      </h6>
      <span
        className="MuiTypography-root MuiTypography-caption"
      >
        subTitle
      </span>
    </div>
  </div>
  <div
    className="TableToolbar-spacer-3"
  />
  <div
    className="TableToolbar-actions-4"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-57 MuiSwitch-switchBase MuiSwitch-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-thumb"
            />
            <input
              checked={false}
              className="PrivateSwitchBase-input-60 MuiSwitch-input"
              onChange={[Function]}
              type="checkbox"
              value="showOnlyErrors"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track"
        />
      </span>
      <span
        className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Show only errors
      </span>
    </label>
  </div>
</div>
`;

exports[`ResultsToolbar matches snapshot with some selected transactions 1`] = `
<div
  className="MuiToolbar-root MuiToolbar-regular TableToolbar-root-1 TableToolbar-highlight-2 MuiToolbar-gutters"
>
  <div
    className="TableToolbar-title-5"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorInherit"
    >
      2
       selected
    </h6>
  </div>
  <div
    className="TableToolbar-spacer-3"
  />
  <div
    className="TableToolbar-actions-4"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-57 MuiSwitch-switchBase MuiSwitch-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-thumb"
            />
            <input
              checked={false}
              className="PrivateSwitchBase-input-60 MuiSwitch-input"
              onChange={[Function]}
              type="checkbox"
              value="showOnlyErrors"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track"
        />
      </span>
      <span
        className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Show only errors
      </span>
    </label>
  </div>
</div>
`;
